--- a/learn-html.html
+++ b/learn-html.html
@@ -3,46 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Oussama Bouhiri- Portfolio</title>
 </head>
 <body>
+
     <!-- Header -->
 <header>
-          <!-- Navbar -->
-      <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#work">Work</a>
-        <a href="#resume">Resume</a>
-        <a href="#contact">Contact</a>
-    </nav>
-</header>
-    <!-- Main-->
+    <h1>Oussama Bouhiri</h1>
+        <!-- Navbar -->
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+
+    <!-- Main -->
 <main>
-    <!-- Home Section -->
-    <section id="home">
-        <h1>Welcome to My Portfolio</h1>
-        <p>Explore my work and learn more about me.</p>
+    
+       <!-- Home Section -->
+    <section id="home" class="hero home-bg">
+        <h2>Welcome to My Digital Portfolio</h2>
+        <p>I am a professional web developer, creating modern and interactive websites using the latest technologies.</p>
     </section>
 
-    <!-- About Section -->
+        <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>My name is Oussama Bouhiri. I am 26 years old and a graduate of a Full Stack Web Developer bootcamp at Go My Code. I have 2 years of experience and am passionate about solving problems and building efficient, modern, and responsive web designs.</p>
+        <p>My name is Oussama Bouhiri, a web development specialist with expertise in HTML, CSS, JavaScript, and more. I love working on projects that enhance user experiences and make digital life easier.</p>
     </section>
 
-    <!-- Work Section -->
-    <section id="work">
-        <h2>My Work</h2>
-        <p>Here are a few projects I have worked on:</p>
-        <ul>
-            <li>Project 1: <a href="#">E-commerce Website</a></li>
-            <li>Project 2: <a href="#">Portfolio Website</a></li>
-            <li>Project 3: <a href="#">Blog Platform</a></li>
-        </ul>
-    </section>
+        <!-- Work Section -->
+        <section id="portfolio">
+            <h2>My Work</h2>
+            <div class="project">
+                <h3>Project 1</h3>
+                <p>A brief description of the project.</p>
+            </div>
+            <div class="project">
+                <h3>Project 2</h3>
+                <p>A brief description of the project.</p>
+            </div>
+        </section>
 
-    <!-- Resume Section -->
+        <!-- Resume Section -->
     <section id="resume">
         <h2>Resume</h2>
         <p>Download my <a href="resume.pdf">resume</a>.</p>
@@ -52,27 +60,23 @@
         </video>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <form action="/submit-form" method="post">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required placeholder="Enter your name"><br><br>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required placeholder="Enter your email"><br><br>
-
-            <label for="message">Message:</label><br>
-            <textarea id="message" name="message" rows="5" required></textarea><br><br>
-            
-            <button type="submit">Submit</button>
-        </form>
-    </section>
+         <!-- Contact Section -->
+         <section id="contact">
+            <h2>Contact Me</h2>
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </section>
 </main>
-    <!-- Footer -->
+<!-- Footer -->
 <footer>
-        <p>&copy; 2025 My Portfolio. All rights reserved.</p>
+    <p>&copy; 2025 Oussama Bouhiri. All rights reserved.</p>
 </footer>
-
 </body>
 </html>
